added grid container for block with images

--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
         так сложно сконцентрироваться, особенно когда очень надо
       </p>
     </header>
+    <section class="images-gallery">
+      <h2>А можно в картинках?</h2>
+      <div class="image-gallery-container">
+        <div class="image-gallery-container_sunset"></div>
+        <div class="image-gallery-container_ice-cream"></div>
+        <div class="image-gallery-container_tape"></div>
+        <div class="image-gallery-container_books"></div>
+        <div class="image-gallery-container_street"></div>
+      </div>
+     
+    </section>
+    <footer class="footer">
+      <h2 class="footer__title">focus</h2>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
