added pseudo elements and rec element

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         Что делать, когда не можешь делать ничего Или почему нам 
         так сложно сконцентрироваться, особенно когда очень надо
       </p>
+      <span class="header__rec">rec</span>
+      <span class="header__rec-pulse"></span>
     </header>
     <section class="images-gallery">
       <h2>А можно в картинках?</h2>
