--- a/index.html
+++ b/index.html
@@ -49,8 +49,45 @@
       <span class="header__rec">rec</span>
       <span class="header__rec-pulse"></span>
     </header>
+    <section class="section-why">
+      <h2 class="section-why__title">Почему сосредоточиться так сложно</h2>
+      <div class="section-why__blocks">
+        <div class="section-why__blocks__item">
+          <div class="section-why__blocks__item-title">
+            <h3 class="section-why__blocks__item-title-text">Многозадачность</h3>
+          </div>
+          <p class="section-why__blocks__item-text">
+            Особенно сложно сосредоточиться, когда задач много и все они — важные. 
+            Где же легендарная многозадачность, когда она так нужна вам (и всем 
+            нанимающим менеджерам этого мира)? А дело в том, что её просто не 
+            существует. Исследователи выяснили, что мозгу тяжело концентрироваться 
+            даже на двух делах одновременно. А когда в поле внимания попадает 
+            несколько важных задач, организм паникует и выделяет кортизол и 
+            адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: 
+            ошибаемся и быстро устаём.
+          </p>
+        </div>
+        <div class="section-why__blocks__item">
+          <div class="section-why__blocks__item-title">
+            <h3 class="section-why__blocks__item-title-text">Дофамин</h3>
+          </div>
+          <p class="section-why__blocks__item-text">
+            Особенно сложно сосредоточиться, когда задач много и все они — важные. 
+            Где же легендарная многозадачность, когда она так нужна вам (и всем 
+            нанимающим менеджерам этого мира)? А дело в том, что её просто не 
+            существует. Исследователи выяснили, что мозгу тяжело концентрироваться 
+            даже на двух делах одновременно. А когда в поле внимания попадает 
+            несколько важных задач, организм паникует и выделяет кортизол и 
+            адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: 
+            ошибаемся и быстро устаём.
+          </p>
+        </div>
+      </div>
+    </section>
     <section class="images-gallery">
-      <h2>А можно в картинках?</h2>
+      <div class="images-gallery-title">
+        <h2 class="images-gallery-title-text">А можно в картинках?</h2>
+      </div>
       <div class="image-gallery-container">
         <div class="image-gallery-container_sunset"></div>
         <div class="image-gallery-container_ice-cream"></div>
