--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light">
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="./styles/globals.css">
-    <link rel="stylesheet" href="./styles/variables.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/dark.css">
-    <link rel="stylesheet" href="./styles/light.css">
+    <meta name="color-scheme" content="dark light" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
@@ -43,43 +43,178 @@
       </nav>
       <h1 class="header__title">no focus</h1>
       <p class="header__text">
-        Что делать, когда не можешь делать ничего Или почему нам 
-        так сложно сконцентрироваться, особенно когда очень надо
+        Что делать, когда не можешь делать ничего Или почему нам так сложно
+        сконцентрироваться, особенно когда очень надо
       </p>
       <span class="header__rec">rec</span>
       <span class="header__rec-pulse"></span>
     </header>
     <section class="section-why">
-      <h2 class="section-why__title">Почему сосредоточиться так сложно</h2>
+      <h2 class="section-why__title title-decor">
+        Почему сосредоточиться так сложно
+      </h2>
       <div class="section-why__blocks">
         <div class="section-why__blocks__item">
           <div class="section-why__blocks__item-title">
-            <h3 class="section-why__blocks__item-title-text">Многозадачность</h3>
+            <h3 class="section-why__blocks__item-title-text">
+              Многозадачность
+            </h3>
           </div>
-          <p class="section-why__blocks__item-text">
-            Особенно сложно сосредоточиться, когда задач много и все они — важные. 
-            Где же легендарная многозадачность, когда она так нужна вам (и всем 
-            нанимающим менеджерам этого мира)? А дело в том, что её просто не 
-            существует. Исследователи выяснили, что мозгу тяжело концентрироваться 
-            даже на двух делах одновременно. А когда в поле внимания попадает 
-            несколько важных задач, организм паникует и выделяет кортизол и 
-            адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: 
-            ошибаемся и быстро устаём.
+          <p class="section-why__blocks__item-text block-item-text">
+            Особенно сложно сосредоточиться, когда задач много и все они —
+            важные. Где же легендарная многозадачность, когда она так нужна вам
+            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
+            просто не существует. Исследователи выяснили, что мозгу тяжело
+            концентрироваться даже на двух делах одновременно. А когда в поле
+            внимания попадает несколько важных задач, организм паникует и
+            выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
+            работаем невнимательно: ошибаемся и быстро устаём.
           </p>
         </div>
         <div class="section-why__blocks__item">
           <div class="section-why__blocks__item-title">
             <h3 class="section-why__blocks__item-title-text">Дофамин</h3>
           </div>
-          <p class="section-why__blocks__item-text">
-            Особенно сложно сосредоточиться, когда задач много и все они — важные. 
-            Где же легендарная многозадачность, когда она так нужна вам (и всем 
-            нанимающим менеджерам этого мира)? А дело в том, что её просто не 
-            существует. Исследователи выяснили, что мозгу тяжело концентрироваться 
-            даже на двух делах одновременно. А когда в поле внимания попадает 
-            несколько важных задач, организм паникует и выделяет кортизол и 
-            адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: 
-            ошибаемся и быстро устаём.
+          <p class="section-why__blocks__item-text block-item-text">
+            Особенно сложно сосредоточиться, когда задач много и все они —
+            важные. Где же легендарная многозадачность, когда она так нужна вам
+            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
+            просто не существует. Исследователи выяснили, что мозгу тяжело
+            концентрироваться даже на двух делах одновременно. А когда в поле
+            внимания попадает несколько важных задач, организм паникует и
+            выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
+            работаем невнимательно: ошибаемся и быстро устаём.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="section-causes">
+      <h2 class="section-causes__title title-decor">
+        Что снижает концентрацию внимания?
+      </h2>
+      <div class="section-causes__blocks">
+        <div class="section-causes__blocks__item">
+          <div class="section-causes__blocks__item-title">
+            <h3 class="section-causes__blocks__item-title-text">
+              Многозадачность
+            </h3>
+          </div>
+          <p class="section-causes__blocks__item-text block-item-text">
+            Как концентрация может снижаться из-за… концентрации? Любая
+            стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
+            мозг постоянно «сканировать» окружающую среду на предмет опасности.
+            Например, читать новости вместо работы. Но быть собранными всё время
+            — невозможно. Концентрация — мышца, и она может не выдержать, если
+            не давать ей отдохнуть.
+          </p>
+        </div>
+        <div class="section-causes__blocks__item">
+          <div class="section-causes__blocks__item-title">
+            <h3 class="section-causes__blocks__item-title-text">Еда</h3>
+          </div>
+          <p class="section-causes__blocks__item-text block-item-text">
+            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+            доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+            эта энергия также быстро, как и приходит. А мы в результате попадаем
+            на «углеводные качели»: как только действие «быстрых углеводов»
+            заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
+            больше быстрых углеводов.
+          </p>
+        </div>
+        <div class="section-causes__blocks__item">
+          <div class="section-causes__blocks__item-title">
+            <h3 class="section-causes__blocks__item-title-text">Гаджеты</h3>
+          </div>
+          <p class="section-causes__blocks__item-text block-item-text">
+            Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+            наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
+            утятами. В результате мозг пытается переключиться с одной задачи на
+            другую — и просто не может. А чтобы вернуться к состоянию полной
+            концентрации, человеку в среднем нужно 20 минут. Вот и получается,
+            что чем больше времени мы проводим в гаджетах, тем больше времени
+            затем нужно, чтобы вернуться к работе.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="section-advice">
+      <h2 class="section-advice__title title-decor">
+        Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+        секунд)
+      </h2>
+      <div class="section-advice__blocks">
+        <div class="section-advice__blocks-title">
+          <h2 class="section-advice__blocks-title-text">
+            А можно в картинках?
+          </h2>
+        </div>
+        <div class="section-advice__blocks__item">
+          <div class="section-advice__blocks__item-title">
+            <h3 class="section-advice__blocks__item-title-text">
+              Представьте небо и облака
+            </h3>
+          </div>
+          <p class="section-advice__blocks__item-text block-item-text">
+            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+            успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
+            раз и мешают эти сложные задачи делать. В такие моменты можно
+            закрыть глаза и представить, что чистое небо — это вы, а облака —
+            тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+            где-то там, за тучами, и никуда не денется. Это упражнение поможет
+            вернуться в настоящий момент, а не волноваться о потенциальных
+            проблемах из будущего.
+          </p>
+        </div>
+        <div class="section-advice__blocks__item">
+          <div class="section-advice__blocks__item-title">
+            <h3 class="section-advice__blocks__item-title-text">
+              Включите музыку
+            </h3>
+          </div>
+          <p class="section-advice__blocks__item-text block-item-text">
+            Но не любую, и не любимую. Любимая может быть связана с сильными
+            положительными эмоциями, которые тоже очень сильно отвлекают.
+            Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+            попробовать включить плейлист в «белым шумом» или нейромузыкой.
+          </p>
+        </div>
+        <div class="section-advice__blocks__item">
+          <div class="section-advice__blocks__item-title">
+            <h3 class="section-advice__blocks__item-title-text">
+              Прогуляйтесь
+            </h3>
+          </div>
+          <p class="section-advice__blocks__item-text block-item-text">
+            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+            показал, что созерцание природы повышает концентрацию, в то время
+            как после просмотра городских пейзажей она наоборот понижается.
+            Можно совместить прогулку с физическими упражнениями или бегом — так
+            в мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+            простая двадцатиминутная прогулка — тоже отличный вариант.
+          </p>
+        </div>
+        <div class="section-advice__blocks__item">
+          <div class="section-advice__blocks__item-title">
+            <h3 class="section-advice__blocks__item-title-text">
+              Хорошо ешьте
+            </h3>
+          </div>
+          <p class="section-advice__blocks__item-text block-item-text">
+            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+            которые препятствуют резким скачкам сахара в крови. Например, с
+            высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
+            фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+          </p>
+        </div>
+        <div class="section-advice__blocks__item">
+          <div class="section-advice__blocks__item-title">
+            <h3 class="section-advice__blocks__item-title-text">Читайте</h3>
+          </div>
+          <p class="section-advice__blocks__item-text block-item-text">
+            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
+            прочитать пост в соцсети, достаточно нескольких минут или даже
+            секунд. А вот интересная книга способна затянуть и на несколько
+            часов и круто тренирует направленное внимание.
           </p>
         </div>
       </div>
@@ -95,7 +230,6 @@
         <div class="image-gallery-container_books"></div>
         <div class="image-gallery-container_street"></div>
       </div>
-     
     </section>
     <footer class="footer">
       <h2 class="footer__title">focus</h2>
