--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
               <h3 class="section-why__blocks__item-title-text">Дофамин</h3>
             </div>
             <p class="section-why__blocks__item-text block-item-text">
-              Особенно сложно сосредоточиться, когда задач много и все они —
-              важные. Где же легендарная многозадачность, когда она так нужна
-              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-              её просто не существует. Исследователи выяснили, что мозгу тяжело
-              концентрироваться даже на двух делах одновременно. А когда в поле
-              внимания попадает несколько важных задач, организм паникует и
-              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
-              работаем невнимательно: ошибаемся и быстро устаём.
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
+              невозможности сосредоточиться замешана и полная противоположность 
+              стрессу — дофамин. Это вещество участвует в системе вознаграждения 
+              мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то 
+              более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В 
+              это время и выделяется дофамин — и мы чувствуем удовольствие. 
+              Получается замкнутый круг: чем больше отвлекаешься, тем больше 
+              удовольствия получаешь.
             </p>
           </div>
         </div>
@@ -146,7 +146,7 @@
         <div class="section-advice__blocks">
           <div class="section-advice__blocks-title">
             <h2 class="section-advice__blocks-title-text">
-              А можно в картинках?
+              5 простых (на самом деле не очень) советов
             </h2>
           </div>
           <div class="section-advice__blocks__item">
