--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
       <span class="header__rec">rec</span>
     </header>
     <main class="content">
-      <section class="section-why">
+      <section class="section section-why">
         <h2 class="section-why__title title-decor">
           Почему сосредоточиться так сложно
         </h2>
         <div class="section-why__blocks">
-          <div class="section-why__blocks__item">
+          <div class="section-why__blocks__item section-content">
             <div class="section-why__blocks__item-title">
               <h3 class="section-why__blocks__item-title-text">
                 Многозадачность
@@ -72,7 +72,7 @@
               работаем невнимательно: ошибаемся и быстро устаём.
             </p>
           </div>
-          <div class="section-why__blocks__item">
+          <div class="section-why__blocks__item section-content">
             <div class="section-why__blocks__item-title">
               <h3 class="section-why__blocks__item-title-text">Дофамин</h3>
             </div>
@@ -89,12 +89,12 @@
           </div>
         </div>
       </section>
-      <section class="section-causes">
+      <section class="section section-causes">
         <h2 class="section-causes__title title-decor">
           Что снижает концентрацию внимания?
         </h2>
         <div class="section-causes__blocks">
-          <div class="section-causes__blocks__item">
+          <div class="section-causes__blocks__item section-content">
             <div class="section-causes__blocks__item-title">
               <h3 class="section-causes__blocks__item-title-text">
                 Многозадачность
@@ -109,7 +109,7 @@
               может не выдержать, если не давать ей отдохнуть.
             </p>
           </div>
-          <div class="section-causes__blocks__item">
+          <div class="section-causes__blocks__item section-content">
             <div class="section-causes__blocks__item-title">
               <h3 class="section-causes__blocks__item-title-text">Еда</h3>
             </div>
@@ -122,7 +122,7 @@
               хотим ещё больше быстрых углеводов.
             </p>
           </div>
-          <div class="section-causes__blocks__item">
+          <div class="section-causes__blocks__item section-content">
             <div class="section-causes__blocks__item-title">
               <h3 class="section-causes__blocks__item-title-text">Гаджеты</h3>
             </div>
@@ -138,7 +138,7 @@
           </div>
         </div>
       </section>
-      <section class="section-advice">
+      <section class="section section-advice">
         <h2 class="section-advice__title title-decor">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
@@ -149,7 +149,7 @@
               5 простых (на самом деле не очень) советов
             </h3>
           </div>
-          <div class="section-advice__blocks__item">
+          <div class="section-advice__blocks__item section-content">
             <div class="section-advice__blocks__item-title">
               <h4 class="section-advice__blocks__item-title-text">
                 Представьте небо и облака
@@ -166,7 +166,7 @@
               проблемах из будущего.
             </p>
           </div>
-          <div class="section-advice__blocks__item">
+          <div class="section-advice__blocks__item section-content">
             <div class="section-advice__blocks__item-title">
               <h3 class="section-advice__blocks__item-title-text">
                 Включите музыку
@@ -179,7 +179,7 @@
               попробовать включить плейлист в «белым шумом» или нейромузыкой.
             </p>
           </div>
-          <div class="section-advice__blocks__item">
+          <div class="section-advice__blocks__item section-content">
             <div class="section-advice__blocks__item-title">
               <h3 class="section-advice__blocks__item-title-text">
                 Прогуляйтесь
@@ -196,7 +196,7 @@
               вариант.
             </p>
           </div>
-          <div class="section-advice__blocks__item">
+          <div class="section-advice__blocks__item section-content">
             <div class="section-advice__blocks__item-title">
               <h3 class="section-advice__blocks__item-title-text">
                 Хорошо ешьте
@@ -209,7 +209,7 @@
               чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
           </div>
-          <div class="section-advice__blocks__item">
+          <div class="section-advice__blocks__item section-content">
             <div class="section-advice__blocks__item-title">
               <h3 class="section-advice__blocks__item-title-text">Читайте</h3>
             </div>
@@ -235,7 +235,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer decorated-zone">
       <h2 class="footer__title">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
