--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
           </li>
         </ul>
       </nav>
-      <h1 class="header__title">no focus</h1>
+      <h1 class="header__title">
+        no focus
+      </h1>
       <div class="block-item-title header-block-item-title">
         <p class="block-item-title-text">
           Что делать, когда не можешь делать ничего Или почему нам так сложно
