--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
           </h2>
         </div>
         <div class="image-gallery-container">
-          <div class="image-gallery-container_sunset"></div>
-          <div class="image-gallery-container_ice-cream"></div>
-          <div class="image-gallery-container_tape"></div>
-          <div class="image-gallery-container_books"></div>
-          <div class="image-gallery-container_street"></div>
+          <div class="image image-gallery-container_sunset"></div>
+          <div class="image image-gallery-container_ice-cream"></div>
+          <div class="image image-gallery-container_tape"></div>
+          <div class="image image-gallery-container_books"></div>
+          <div class="image image-gallery-container_street"></div>
         </div>
       </section>
     </main>
