fix all code changes

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
         <h2 class="section-why__title title-decor">
           Почему сосредоточиться так сложно
         </h2>
-        <div class="section-why__blocks">
+        <div class="section-why__blocks section__blocks">
           <div class="section-why__blocks__item section-content">
             <div class="block-item-title section-why__blocks__item-title">
-              <h4
+              <h3
                 class="block-item-title-text section-why__blocks__item-title-text"
               >
                 Многозадачность
-              </h4>
+              </h3>
             </div>
             <p class="section-why__blocks__item-text block-item-text">
               Особенно сложно сосредоточиться, когда задач много и все они —
@@ -83,11 +83,11 @@
           </div>
           <div class="section-why__blocks__item section-content">
             <div class="block-item-title section-why__blocks__item-title">
-              <h4
+              <h3
                 class="block-item-title-text section-why__blocks__item-title-text"
               >
                 Дофамин
-              </h4>
+              </h3>
             </div>
             <p class="section-why__blocks__item-text block-item-text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
@@ -109,11 +109,11 @@
         <div class="section-causes__blocks">
           <div class="section-causes__blocks__item section-content">
             <div class="block-item-title section-causes__blocks__item-title">
-              <h4
+              <h3
                 class="block-item-title-text section-causes__blocks__item-title-text"
               >
                 Многозадачность
-              </h4>
+              </h3>
             </div>
             <p class="section-causes__blocks__item-text block-item-text">
               Как концентрация может снижаться из-за… концентрации? Любая
@@ -126,11 +126,11 @@
           </div>
           <div class="section-causes__blocks__item section-content">
             <div class="block-item-title section-causes__blocks__item-title">
-              <h4
+              <h3
                 class="block-item-title-text section-causes__blocks__item-title-text"
               >
                 Еда
-              </h4>
+              </h3>
             </div>
             <p class="section-causes__blocks__item-text block-item-text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -143,11 +143,11 @@
           </div>
           <div class="section-causes__blocks__item section-content">
             <div class="block-item-title section-causes__blocks__item-title">
-              <h4
+              <h3
                 class="block-item-title-text section-causes__blocks__item-title-text"
               >
                 Гаджеты
-              </h4>
+              </h3>
             </div>
             <p class="section-causes__blocks__item-text block-item-text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -166,7 +166,7 @@
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <div class="section-advice__blocks">
+        <div class="section-advice__blocks section__blocks">
           <div class="block-item-title section-advice__blocks-title">
             <h3 class="block-item-title-text section-advice__blocks-title-text">
               5 простых (на самом деле не очень) советов
