--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h1 class="header__title">no focus</h1>
       <div class="block-item-title header-block-item-title">
         <p class="block-item-title-text">
-          Что делать, когда не можешь делать ничего Или почему нам так сложно
+          Что делать, когда не можешь делать ничего <br /> Или почему нам так сложно
           сконцентрироваться, особенно когда очень надо
         </p>
       </div>
